--- a/inventory.ini
+++ b/inventory.ini
@@ -1,7 +1,3 @@
-[test_servers]
-# Замените на IP вашей тестовой машины
-test_vm ansible_host=192.168.1.100 ansible_user=your_user
+[all]
+localhost ansible_connection=local
 
-[test_servers:vars]
-ansible_ssh_private_key_file=~/.ssh/id_rsa
-ansible_become=yes 
