--- a/test-playbook.yml
+++ b/test-playbook.yml
@@ -4,9 +4,6 @@
   connection: local
   become: yes
   vars:
-    # Настройте переменные под ваши нужды
-    warp_native_check_retries: 5
-    warp_native_check_delay: 10
-    warp_native_conf_name: "warp0.conf"
+    warp_native_state: absent
   roles:
-    - warp_native 
+    - role: ./
