--- a/test-verify.yml
+++ b/test-verify.yml
@@ -3,10 +3,6 @@
   hosts: localhost
   connection: local
   become: yes
-  vars:
-    warp_native_check_retries: 3
-    warp_native_check_delay: 5
-    warp_native_conf_name: "warp0.conf"
   tasks:
     - name: Include verify tasks
-      include_tasks: defaults/tasks/verify.yml 
+      include_tasks: tasks/verify.yml 
