--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 warp_native_state: present
-warp_native_modify_resolv: false
+warp_native_modify_resolv: true
 warp_native_temp_nameservers: ["1.1.1.1", "8.8.8.8"]
 
 warp_native_wgcf_version: latest
@@ -18,6 +18,6 @@ warp_native_table_off: true
 warp_native_check_retries: 10
 warp_native_check_delay: 1
 
-warp_native_purge_all: true
+warp_native_purge_all: false
 warp_native_remove_wireguard_pkg: false
-warp_native_cleanup_dns_backup: true
+warp_native_cleanup_dns_backup: false
