Update README and meta files to change author and namespace to 'themelbine', and adjust installation instructions and role references accordingly.

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,6 +1,7 @@
 ---
 galaxy_info:
-  author: melbine
+  author: themelbine
+  namespace: themelbine
   description: Installs and configures Cloudflare WARP using wgcf and WireGuard
   company: ""
   
