--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,14 +1,10 @@
 ---
 galaxy_info:
   author: themelbine
-  namespace: themelbine
   description: Installs and configures Cloudflare WARP using wgcf and WireGuard
   company: ""
-  
   license: MIT
-  
   min_ansible_version: "2.14"
-  
   platforms:
     - name: Debian
       versions:
@@ -19,19 +15,11 @@ galaxy_info:
         - focal
         - jammy
         - noble
-  
   galaxy_tags:
     - cloudflare
     - warp
     - wireguard
     - vpn
     - networking
-    - security
-    - wgcf
 
-dependencies:
-  - name: community.general
-    version: ">=6.0.0"
-
-collections:
-  - community.general 
+dependencies: [] 
