Fix all ansible-lint warnings and improve code quality
- Add role_name to meta/main.yml for Galaxy compatibility
- Capitalize all task names following naming conventions
- Add file permissions, owner, and group to all file operations
- Fix YAML formatting and trailing spaces
- Replace ignore_errors with failed_when for better error handling
- Update handler references and improve Jinja2 spacing
- Break long lines to comply with line length limits

--- a/handlers/main.yml
+++ b/handlers/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: restart warp
+- name: Restart WARP
   ansible.builtin.systemd:
     name: "wg-quick@{{ warp_native_conf_name | splitext | first }}"
     state: restarted
