--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,5 +1,6 @@
 ---
 galaxy_info:
+  role_name: warp_native
   author: themelbine
   description: Installs and configures Cloudflare WARP using wgcf and WireGuard
   company: ""
@@ -22,4 +23,4 @@ galaxy_info:
     - vpn
     - networking
 
-dependencies: [] 
+dependencies: []
