--- a/tasks/uninstall.yml
+++ b/tasks/uninstall.yml
@@ -1,5 +1,5 @@
 ---
-- name: stop and disable warp
+- name: Stop and disable WARP
   ansible.builtin.systemd:
     name: "wg-quick@{{ warp_native_conf_name | splitext | first }}"
     state: stopped
@@ -8,56 +8,59 @@
     daemon_reload: true
   failed_when: false
 
-- name: remove config file
+- name: Remove config file
   ansible.builtin.file:
     path: "{{ warp_native_conf_dir }}/{{ warp_native_conf_name }}"
     state: absent
 
-- name: ensure conf dir exists
+- name: Ensure conf dir exists
   ansible.builtin.file:
     path: "{{ warp_native_conf_dir }}"
     state: directory
     mode: "0755"
 
-- name: remove wgcf account
+- name: Remove wgcf account
   ansible.builtin.file:
     path: "{{ ansible_env.HOME }}/wgcf-account.toml"
     state: absent
   when: warp_native_purge_all
 
-- name: remove wgcf profile
+- name: Remove wgcf profile
   ansible.builtin.file:
     path: "{{ ansible_env.HOME }}/wgcf-profile.conf"
     state: absent
   when: warp_native_purge_all
 
-- name: remove wgcf binary
+- name: Remove wgcf binary
   ansible.builtin.file:
     path: "{{ warp_native_wgcf_install_path }}"
     state: absent
   when: warp_native_purge_all
 
-- name: delete interface if exists
+- name: Delete interface if exists
   ansible.builtin.command: ip link del "{{ warp_native_conf_name | splitext | first }}"
   register: warp_native_delif
   changed_when: warp_native_delif.rc == 0
   failed_when: false
 
-- name: restore resolv.conf from backup
+- name: Restore resolv.conf from backup
   ansible.builtin.copy:
     src: /etc/resolv.conf.backup
     dest: /etc/resolv.conf
     remote_src: true
+    mode: "0644"
+    owner: root
+    group: root
   when: warp_native_modify_resolv and warp_native_cleanup_dns_backup
-  ignore_errors: true
+  failed_when: false
 
-- name: remove resolv.conf backup
+- name: Remove resolv.conf backup
   ansible.builtin.file:
     path: /etc/resolv.conf.backup
     state: absent
   when: warp_native_modify_resolv and warp_native_cleanup_dns_backup
 
-- name: remove wireguard package on debian family
+- name: Remove WireGuard package on Debian family
   ansible.builtin.apt:
     name: wireguard
     state: absent
@@ -65,6 +68,6 @@
     update_cache: false
   when: ansible_os_family == "Debian" and warp_native_remove_wireguard_pkg
 
-- name: daemon reload
+- name: Daemon reload
   ansible.builtin.systemd:
     daemon_reload: true
