--- a/tasks/install.yml
+++ b/tasks/install.yml
@@ -1,10 +1,10 @@
 ---
-- name: Ensure WireGuard installed on Debian family
+- name: Ensure WireGuard installed on Debian/Ubuntu
   ansible.builtin.apt:
     name: wireguard
     state: present
     update_cache: true
-  when: ansible_os_family == "Debian"
+  when: ansible_distribution in ["Debian", "Ubuntu"]
 
 - name: Backup resolv.conf
   ansible.builtin.copy:
